# grub-shusher

./: .gitignore  AUTHORS  Makefile  Makefile.in  README.md  config.h.in  configure  configure.ac  grub-kernel.c  mbr.c  setup-debian.sh  shush-kernel  shush-kernel.cpp  shush-mbr  shush-mbr.cpp
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
pkg/: PKGBUILD
src/: Makefile.am  Makefile.in  cpphead2  shush-kernel.cpp  shush-mbr.cpp
